--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,14 +11,10 @@ spring.main.allow-bean-definition-overriding=true
 spring.data.mongodb.auto-index-creation=true
 spring.data.mongodb.uri=mongodb://127.0.0.1:27017/?replicaSet=rs0
 spring.data.mongodb.database=ai-library
-#
-#spring.neo4j.uri=bolt://localhost:7687
-#spring.neo4j.authentication.username=neo4j
-#spring.neo4j.authentication.password=your_strong_password
 
-spring.ai.openai.api-key=no-key
-spring.ai.openai.base-url=http://localhost:1234
-spring.ai.openai.chat.options.model=llama-2-7b-chat
+spring.ai.openai.api-key=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
+spring.ai.openai.base-url=https://api.groq.com/openai/
+spring.ai.openai.chat.options.model=gemma2-9b-it
 
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
