--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
         </repository>
     </repositories>
     <properties>
-        <java.version>21</java.version>
+        <java.version>23</java.version>
         <vaadin.version>24.6.6</vaadin.version>
         <spring-ai.version>1.0.0-M6</spring-ai.version>
         <spring-cloud.version>2024.0.1</spring-cloud.version>
@@ -126,8 +126,8 @@
                             <version>1.18.36</version>
                         </path>
                     </annotationProcessorPaths>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
+                    <source>23</source>
+                    <target>23</target>
                     <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
